<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_description_title" />

        <TextView
            android:id="@+id/description"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature_title" />

        <TextView
            android:id="@+id/temp"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feels_like_title" />

        <TextView
            android:id="@+id/feels_like"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_temperature_title" />

        <TextView
            android:id="@+id/min_temp"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_temperature_title" />

        <TextView
            android:id="@+id/max_temp"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_title" />

        <TextView
            android:id="@+id/wind_speed"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</FrameLayout>