<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_title_margin_start"
        android:layout_marginTop="@dimen/search_title_margin_top"
        android:layout_marginBottom="@dimen/search_title_margin_bottom"
        android:fontFamily="@font/roboto_mono_medium"
        android:text="@string/search_title"
        android:textColor="@color/grey"
        android:textSize="@dimen/search_title_text_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/search_input_margin_bottom"
        android:hint="@string/Search_hint"
        app:boxCornerRadiusBottomEnd="@dimen/search_input_box_radius"
        app:boxCornerRadiusBottomStart="@dimen/search_input_box_radius"
        app:boxCornerRadiusTopEnd="@dimen/search_input_box_radius"
        app:boxCornerRadiusTopStart="@dimen/search_input_box_radius"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconMode="custom"
        app:helperText="@string/search_help_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>